# azure-dbx-mock-platform

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  Taskfile.yml
.claude/: settings.json  settings.local.json.example
.github/workflow/: workload.yaml
.github/workflows/: bootstrap.yaml  guardrails.yaml  orchestrator-down.yaml  orchestrator-up.yaml  test-unit.yaml  workload-azure.yaml  workload-catalog.yaml  workload-dbx.yaml  workload-etl.yaml  workload.yaml
data/: sample_orders.csv
docs/: code-review-2026-03-02.md  code-review-2026-03-03.md  code-review-2026-03-04.md  code-review-2026-03-05.md  code-review-2026-03-06.md  status.md
docs/adr/: 001-terraform-scope.md  002-oidc-auth.md  003-idempotency.md  004-consumer-access.md  005-group-permissions.md  006-overwrite-only.md  007-wheel-packaging.md
docs/design/: catalog-ddl-layer.md  platform-layer.md  production-considerations.md
docs/proposals/: README.md  code-design-transform-separation.md  data-engineering-implementation-plan.md  data-engineering-scope.md  docs-restructure.md  etl-future-enhancements.md  etl-overwrite-pattern.md  etl-short-term-improvements.md  production-considerations.md  sdlc-catalog-lookup.md  testing-strategy.md  wheel-packaging.md
docs/runbooks/: decommission-schema.md  (+4 more)
etl/: databricks.yml  pyproject.toml
etl/notebooks/: e2e_test.py  pipeline.py
etl/resources/: etl-e2e-test.yml  etl-pipeline.yml
etl/src/mock_platform/: __init__.py  catalog_lookup.py  transform.py
etl/tests/unit/: test_catalog_lookup.py  test_transform.py
platform/: databricks.yml
(+87 files in other folders)
