[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock_platform"
version = "0.1.0"
description = "Pure PySpark transformation functions for the mock data platform."
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]
